refactor: prefer Stream.toList() over Collectors.toList() (#443)